# Joyometry

./: README.md  joyom.cpp
CGAL_experiments/: CMakeLists.txt
CGAL_experiments/models/: big_bunny.off  big_bunny_repaired.off
Open_CASCADE_experiments/oc_cpp/: .gitignore  CMakeLists.txt  main.cpp  minimal.cpp  oc_test.cpp  torc.cpp  utils.cpp
Open_CASCADE_experiments/oc_cpp/results/: box.brep  helix_curve.brep  pipe_helix.brep  scrambled_helix.brep  torc_3_10_100_10_5.brep
Open_CASCADE_experiments/oc_react/: package-lock.json  package.json  vite.config.js
Open_CASCADE_experiments/oc_react/src/: App.jsx  main.jsx
models/: bunny_thick.ply  optimal_bunny.off
